Kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mop-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: malauryd/mop_static
        ports:
        - containerPort: 80
        resources:
          limits:
           memory: "64Mi"
           cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: static-service
spec:
  ports:
  - name: 'http'
    port: 80
    targetPort: 80
  selector:
    app: static
  type: NodePort
